--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color:#808080;
+}
+
 .square {
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/width */
 
@@ -5,7 +9,6 @@
     width: 100px;
     border: 1px solid; 
     
-    width:#808080;
-    height: #808080;
+    
     background-color: #fea500;
   }
